--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>callback hell</title>
+    <title>axios</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 </head>
 <body>
   <h1>hello</h1>
-  <script src="xmlhttp.js"></script>
+  <script src="axios.js"></script>
 </body>
 </html>
